2015-02-15  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2014-01-08  Jeff Law  <law@redhat.com>

	* ree.c (get_sub_rtx): New function, extracted from...
	(merge_def_and_ext): Here.
	(combine_reaching_defs): Use get_sub_rtx.

	2014-01-07  Jeff Law  <law@redhat.com>

	PR middle-end/53623
	* ree.c (combine_set_extension): Handle case where source
	and destination registers in an extension insn are different.
	(combine_reaching_defs): Allow source and destination
	registers in extension to be different under limited
	circumstances.
	(add_removable_extension): Remove restriction that the
	source and destination registers in the extension are the
	same.
	(find_and_remove_re): Emit a copy from the extension's
	destination to its source after the defining insn if
	the source and destination registers are different.

	2013-12-12  Jeff Law  <law@redhat.com>

	* i386.md (simple LEA peephole2): Add missing mode to zero_extend
	for zero-extended MULT simple LEA pattern.

2015-02-12  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2015-02-09  Jakub Jelinek  <jakub@redhat.com>

	PR target/64979
	* tree-stdarg.c (pass_stdarg::execute): Scan phi node args for
	va_list escapes.

2015-02-11  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.md (reload_out<mode>_aligned): Make operands 2
	and 3 earlyclobber operands.

2015-02-05  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/64580
	Backport from mainline
	* config.rs6000/rs6000.c (compute_vrsave_mask): Reverse loop order.
	(rs6000_stack_info): Add assert.
	(rs6000_output_savres_externs): New function, split off from...
	(rs6000_output_function_prologue): ... here.  Do not call it for
	thunks.

2015-02-04  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2015-01-31  Uros Bizjak  <ubizjak@gmail.com>

        PR target/64882
	* config/i386/predicates.md (address_no_seg_operand): Reject
	non-CONST_INT_P operands in invalid mode.

	Backport from mainline