@@ -1,6 +1,12 @@
 2015-02-15  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
+	2014-01-10  Jeff Law  <law@redhat.com>
+
+	PR middle-end/59743
+	* gcc.c-torture/compile/pr59743.c: New test.
+
+	Backport from mainline:
 	2014-01-07  Jeff Law  <law@redhat.com>
 
 	PR middle-end/53623
