@@ -1,6 +1,13 @@
 2015-02-15  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
+	2014-01-10  Jeff Law  <law@redhat.com>
+
+	PR middle-end/59743
+	* ree.c (combine_reaching_defs): Ensure the defining statement
+	occurs before the extension when optimizing extensions with
+	different source and destination hard registers.
+
 	2014-01-08  Jeff Law  <law@redhat.com>
 
 	* ree.c (get_sub_rtx): New function, extracted from...
